--- a/templates/index.html
+++ b/templates/index.html
@@ -4,17 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hostel Portal</title>
-    <style>
-        .input-container {
-            display: flex; 
-            gap: 10px;
-        }
-    </style>
+    <link rel="stylesheet" href="{{ url_for('static',filename='css/style-index.css') }}">
 </head>
 <body>
+    <div class="box">
     <h1>Leave Form</h1>
     <p>Please enter your information:</p>
-    <form  action="{{ url_for("home")}}" method="post" > 
+    <form  action="{{ url_for("home") }}" method="post" > 
         <label for="name">Name:</label>
         <input type="text" id="name" name="name" placeholder="Enter Name here...">
         <br>
@@ -39,10 +35,10 @@
         <input type="text" id="Reason" name="Reason" placeholder="Enter Reason  here...">
         <br>
         <br>
-        <input type="submit" value="Submit">
+        <input class="bt" type="submit" value="Submit">
     </form>
+    </div>
 </body>
 
 
 </html>
-
