--- a/templates/search.html
+++ b/templates/search.html
@@ -3,25 +3,10 @@
 <html>
 <head>
     <title>Data from MongoDB</title>
-    <style>
-        table {
-            border-collapse: collapse;
-            width: 100%;
-        }
-
-        th, td {
-            border: 1px solid #ddd;
-            padding: 8px;
-            text-align: left;
-        }
-
-        th {
-            background-color: #f2f2f2;
-        }
-    </style>
+    <link rel="stylesheet" href="{{ url_for('static',filename='css/style-search.css') }}">
 </head>
 <body>
-    <h1>your leave status</h1>
+    <h1>Your Leave Status</h1>
     <table>
         <thead>
             <tr>
